--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,3 +1,4 @@
 {
-  "improve": { "message": "\u0423\u043b\u0443\u0447\u0448\u0438\u0442\u044c" }
+  "improve": { "message": "\u0423\u043b\u0443\u0447\u0448\u0438\u0442\u044c" },
+  "rewrite": { "message": "\u041f\u0435\u0440\u0435\u0444\u0440\u0430\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c" }
 }
